<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:gravity="center"
    tools:context="com.mist.it.pod_nk.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/Gainsboro2"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/mini_margin"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/mini_margin"
            android:gravity="center"
            android:text="@string/Login"
            android:textSize="@dimen/text_h1"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgMALogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/mini_margin"
            android:contentDescription="@string/Logo"
            app:srcCompat="@mipmap/ic_launcher" />

        <EditText
            android:id="@+id/edtMAUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/mini_margin"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edtMAPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/mini_margin"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnMALogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_margin="@dimen/mini_margin"
            android:background="@drawable/silver_button"
            android:text="@string/Login" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
